--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
    <script src="js/Snake.js"></script>
 	<script src="js/game.js"></script>
 </body>
